fixed scrollbar behavior between About page and other pages

--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,13 @@ li{
   overflow-wrap: anywhere;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  overflow-y: auto;
+}
+
+.page::-webkit-scrollbar {
+  display: none; /* Hide scrollbar */
 }
 
