--- a/src/Pages/About/AboutContainer/AboutContainer.css
+++ b/src/Pages/About/AboutContainer/AboutContainer.css
@@ -1,7 +1,7 @@
-.about-container{
+/* .about-container{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
-}
+} */
