--- a/src/Pages/Home/BodyContainer/DirList/DirList.css
+++ b/src/Pages/Home/BodyContainer/DirList/DirList.css
@@ -1,7 +1,7 @@
 .dir-list{
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 60vw;
     max-height: 100px;
     overflow-x: auto;
     justify-content: center;
@@ -12,7 +12,14 @@
     overflow-y: scroll;
     border-radius: 1px;
     border:dashed 1px var(--tertiary);
+    box-sizing: border-box;
 }
 .dir-list::-webkit-scrollbar {
     display: none; /* for Chrome, Safari, and Opera */
 }
+
+@media only screen and (max-width: 768px) {
+    body {
+        height: fit-content;
+    }
+  }
